--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -24,6 +24,17 @@
   border-radius: 30px;
   border: 0;
   font-weight: 500;
+  transition: all .3s;
+  opacity: 0.9;
+  &:hover{
+    color: white;
+    background: linear-gradient(-190deg, $primary, $secondary);
+    box-shadow: 1px 1px 5px rgb(85, 85, 85);
+    opacity: 1;
+  }
+  &:focus {
+    outline:none;
+  }
 }
 
 @mixin use_card {
@@ -41,29 +52,38 @@
   align-items: center;
 }
 
-@mixin heart_logo {
-  position: absolute;
-  right: 30px;
-  bottom: 20px;
-  font-size: 30px;
+@mixin menu_card_tablet {
+  
+  padding: 15px;
+  border-radius: 20px ;
+  background: $grey_card;
+  width: 45%;
+
+  h2{
+    margin:0 ;
+  }
+  .line{
+    margin: 10px 0px 15px 0px;
+  }
 }
 
 @mixin menu_card {
 
-  :nth-child(1){
-    animation-delay: .45s;
-  }
-  :nth-child(2){
-    animation-delay: 1s;
-  }
   :nth-child(3){
-    animation-delay: 1.15s;
+    animation-delay: .6s;
   }
   :nth-child(4){
-    animation-delay: 1.30s;
+    animation-delay: .7s;
   }
+  :nth-child(5){
+    animation-delay: .8s;
+  }
+  :nth-child(6){
+    animation-delay: .9s;
+  }
+  
   &_card {
-    animation: display_card cubic-bezier(0.83, 0.02, 0.36, 1) 1s both;
+    animation: display_card cubic-bezier(0.83, 0.02, 0.36, 1) .5s both;
     height: 40px;
     border-radius: 20px;
     box-shadow: 0px 0px 5px rgb(214, 214, 214);
@@ -74,29 +94,69 @@
     display: flex;
     flex-flow: column wrap;
     justify-content: space-around;
+    box-sizing: content-box;
+    overflow: hidden;
 
     .fas{
-      font-size: 20px;
+      color: white;
+      opacity: 0;
+      font-size: 21px;
       position: relative;
       right: -40px;
-      top: -10px;
+      top: -8px;
       align-self: flex-end;
       vertical-align: center;
+      transition: all .4s .1s ease-in-out;
+
+    }
+    &:hover i{
+      transform: translateX(-40px) rotate(-360deg);
+      opacity: 1;
+    }
+
+    
+    
+    .green_check{
+      z-index: -1;
+      position: absolute;
+      right: -40px;
+      height: 60px;
+      width: 0px;
+      background-color: $tertiary;
+      transition: all .5s ease-in-out;
+    }
+    &:hover .green_check{
+      transform: translateX(-40px);
+      width: 60px;
     }
 
     .name {
       font-size: 15px;
       font-weight: 600;
+      transition: all .5s ease-in-out;
+
     }
+    &:hover .name{
+      width: 70%;
+    }
+
     .subname {
       font-size: 14px;
+      transition: all .5s ease-in-out;
+    }
+    &:hover .subname{
+      width: 70%;
     }
     .prix {
       font-size: 12px;
       font-weight: bold;
       position: relative;
       align-self: flex-end;
-      top: 11px;
+      top: 23px;
+      transition: all .5s ease-in-out;
+    }
+    &:hover .prix{
+      transform: translateX(-50px);
     }
     
     :nth-child(1){
