--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,6 +1,7 @@
 @import "colors";
 @import "mixins";
 @import "animations";
+@import "header";
 
 .intro {
   height: 250px;
@@ -23,15 +24,21 @@
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
-
+    
     h1 {
       font-family: "Shrikhand", cursive;
       font-weight: 200;
       margin: 0;
     }
-    .fa-heart {
-      align-self: center;
+    
+    @include heart;
+
+    .heart{
+      top: 21px;
     }
+
+
+    
   }
 }
 
@@ -87,15 +94,17 @@
     }
 }
 
+// tablette -------------------------------------------------->
 
-@media screen and (min-width: 426px) and (max-width: 1000px){
+@media screen and (min-width: 426px) and (max-width: 1439px){
   body{
     background-color:white ;
   }
   .intro{
-
+    width: 100%;
+    overflow: hidden;
     img{
-      animation: menu_img 5s ease-out;
+      animation: menu_img 5s ease-out both;
     }
   }
   .menu{
@@ -133,14 +142,82 @@
     }
     .dessert{
       @include menu_card_tablet;
+      margin: auto;
       margin-top: 15px;
-      width: 100%;
+      // width: 100%;
       &_card{
-        width: 70%;
+        // width: 70%;
         margin: auto;
         margin-bottom: 10px;
       }
 
     }
+  }
+}
+
+// desktop  ------------------------------------------------------------------>
+
+@media screen and (min-width: 1440px){
+
+  body{
+    background-color:white ;
+  }
+
+  .intro{
+    width: 100%;
+    overflow: hidden;
+    img{
+      animation: menu_img 5s ease-out both;
+    }
+  }
+  .menu{
+    top: 0;
+    border-radius: 0px;
+    background: white;
+
+    h1{
+      border-bottom: 2px solid $primary;
+    }
+
+    .heart{
+      left: 300px;
+    }
+    &_container{
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      width: 100%;
+      :nth-child(3){
+        margin: auto;
+      }
+
+      .separator{
+        display: none
+      }
+    }
+
+    .entree{
+      @include menu_card_desktop;
+      margin: 15px 0px;
+    }
+    .plats{
+      @include menu_card_desktop;
+      margin: 15px 0px;
+    }
+    .dessert{
+      @include menu_card_desktop;
+      margin: auto;
+      margin: 15px 0px;
+    }
+
+    button{
+      margin-bottom: 200px;
+    }
+  }
+
+  footer{
+    align-items: center;
+    width: 100%;
+    bottom: 0px;
   }
 }
