--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -67,6 +67,58 @@
   }
 }
 
+@mixin menu_card_desktop {
+  
+  padding: 15px;
+  border-radius: 20px ;
+  background: transparent;
+  width: 30%;
+
+  h2{
+    margin:0 ;
+  }
+  .line{
+    margin: 10px 0px 15px 0px;
+  }
+}
+
+@mixin heart {
+  .heart{
+    position: absolute;
+    bottom: 25px;
+    right: 25px;
+    height: 25px;
+    width: 25px;
+
+    &:hover .state_2{
+      opacity: 0;
+    }
+
+    &:hover .state_1{
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+  .fa-heart{
+    font-size: 25px;
+    position: absolute;
+  }
+  .state_1{
+    opacity: 0;
+    color: transparent;
+    transform: scale(0);
+    background: linear-gradient($primary, $secondary);
+    background-clip: text;
+    -webkit-background-clip: text;
+    transition: all .3s ease-in-out;
+  }
+
+  .state_2{
+    transition: all .5s ease-in-out;
+
+  }
+}
+
 @mixin menu_card {
 
   :nth-child(3){
@@ -129,6 +181,7 @@
       transform: translateX(-40px);
       width: 60px;
     }
+
 
     .name {
       font-size: 15px;
