--- a/scss/style.css
+++ b/scss/style.css
@@ -115,8 +115,8 @@
 @-webkit-keyframes display_card {
   from {
     opacity: 0;
-    -webkit-transform: translateY(50px);
-            transform: translateY(50px);
+    -webkit-transform: translateY(20px);
+            transform: translateY(20px);
   }
   to {
     opacity: 1;
@@ -128,8 +128,8 @@
 @keyframes display_card {
   from {
     opacity: 0;
-    -webkit-transform: translateY(50px);
-            transform: translateY(50px);
+    -webkit-transform: translateY(20px);
+            transform: translateY(20px);
   }
   to {
     opacity: 1;
@@ -184,26 +184,26 @@
 
 @-webkit-keyframes menu_img {
   from {
-    -webkit-transform: scale(1.2) translateX(-30px);
-            transform: scale(1.2) translateX(-30px);
+    -webkit-transform: scale(1.2) translateX(-10px);
+            transform: scale(1.2) translateX(-10px);
     opacity: 0.9;
   }
   to {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
     opacity: 1;
   }
 }
 
 @keyframes menu_img {
   from {
-    -webkit-transform: scale(1.2) translateX(-30px);
-            transform: scale(1.2) translateX(-30px);
+    -webkit-transform: scale(1.2) translateX(-10px);
+            transform: scale(1.2) translateX(-10px);
     opacity: 0.9;
   }
   to {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
     opacity: 1;
   }
 }
@@ -294,8 +294,8 @@
 @keyframes display_card {
   from {
     opacity: 0;
-    -webkit-transform: translateY(50px);
-            transform: translateY(50px);
+    -webkit-transform: translateY(20px);
+            transform: translateY(20px);
   }
   to {
     opacity: 1;
@@ -328,13 +328,13 @@
 
 @keyframes menu_img {
   from {
-    -webkit-transform: scale(1.2) translateX(-30px);
-            transform: scale(1.2) translateX(-30px);
+    -webkit-transform: scale(1.2) translateX(-10px);
+            transform: scale(1.2) translateX(-10px);
     opacity: 0.9;
   }
   to {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
     opacity: 1;
   }
 }
@@ -412,8 +412,8 @@
 @keyframes display_card {
   from {
     opacity: 0;
-    -webkit-transform: translateY(50px);
-            transform: translateY(50px);
+    -webkit-transform: translateY(20px);
+            transform: translateY(20px);
   }
   to {
     opacity: 1;
@@ -446,13 +446,13 @@
 
 @keyframes menu_img {
   from {
-    -webkit-transform: scale(1.2) translateX(-30px);
-            transform: scale(1.2) translateX(-30px);
+    -webkit-transform: scale(1.2) translateX(-10px);
+            transform: scale(1.2) translateX(-10px);
     opacity: 0.9;
   }
   to {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
     opacity: 1;
   }
 }
@@ -508,10 +508,49 @@
   margin: 0;
 }
 
+.menu .intro_legend .heart {
+  position: absolute;
+  bottom: 25px;
+  right: 25px;
+  height: 25px;
+  width: 25px;
+}
+
+.menu .intro_legend .heart:hover .state_2 {
+  opacity: 0;
+}
+
+.menu .intro_legend .heart:hover .state_1 {
+  opacity: 1;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
 .menu .intro_legend .fa-heart {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  font-size: 25px;
+  position: absolute;
+}
+
+.menu .intro_legend .state_1 {
+  opacity: 0;
+  color: transparent;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+  background: linear-gradient(#9356DC, #FF79DA);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+}
+
+.menu .intro_legend .state_2 {
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+}
+
+.menu .intro_legend .heart {
+  top: 21px;
 }
 
 .menu_container h2 {
@@ -984,13 +1023,17 @@
   border: 0;
 }
 
-@media screen and (min-width: 426px) and (max-width: 1000px) {
+@media screen and (min-width: 426px) and (max-width: 1439px) {
   body {
     background-color: white;
   }
+  .intro {
+    width: 100%;
+    overflow: hidden;
+  }
   .intro img {
-    -webkit-animation: menu_img 5s ease-out;
-            animation: menu_img 5s ease-out;
+    -webkit-animation: menu_img 5s ease-out both;
+            animation: menu_img 5s ease-out both;
   }
   .menu {
     border-top: 1px solid #FF79DA;
@@ -1053,8 +1096,8 @@
     border-radius: 20px;
     background: #f6f6f6;
     width: 45%;
+    margin: auto;
     margin-top: 15px;
-    width: 100%;
   }
   .menu .dessert h2 {
     margin: 0;
@@ -1063,9 +1106,100 @@
     margin: 10px 0px 15px 0px;
   }
   .menu .dessert_card {
-    width: 70%;
     margin: auto;
     margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  body {
+    background-color: white;
+  }
+  .intro {
+    width: 100%;
+    overflow: hidden;
+  }
+  .intro img {
+    -webkit-animation: menu_img 5s ease-out both;
+            animation: menu_img 5s ease-out both;
+  }
+  .menu {
+    top: 0;
+    border-radius: 0px;
+    background: white;
+  }
+  .menu h1 {
+    border-bottom: 2px solid #9356DC;
+  }
+  .menu .heart {
+    left: 300px;
+  }
+  .menu_container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 100%;
+  }
+  .menu_container :nth-child(3) {
+    margin: auto;
+  }
+  .menu_container .separator {
+    display: none;
+  }
+  .menu .entree {
+    padding: 15px;
+    border-radius: 20px;
+    background: transparent;
+    width: 30%;
+    margin: 15px 0px;
+  }
+  .menu .entree h2 {
+    margin: 0;
+  }
+  .menu .entree .line {
+    margin: 10px 0px 15px 0px;
+  }
+  .menu .plats {
+    padding: 15px;
+    border-radius: 20px;
+    background: transparent;
+    width: 30%;
+    margin: 15px 0px;
+  }
+  .menu .plats h2 {
+    margin: 0;
+  }
+  .menu .plats .line {
+    margin: 10px 0px 15px 0px;
+  }
+  .menu .dessert {
+    padding: 15px;
+    border-radius: 20px;
+    background: transparent;
+    width: 30%;
+    margin: auto;
+    margin: 15px 0px;
+  }
+  .menu .dessert h2 {
+    margin: 0;
+  }
+  .menu .dessert .line {
+    margin: 10px 0px 15px 0px;
+  }
+  .menu button {
+    margin-bottom: 200px;
+  }
+  footer {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    bottom: 0px;
   }
 }
 
@@ -1174,8 +1308,8 @@ body {
   top: 300px;
   border: 2px solid #9356DC;
   border-radius: 50%;
-  -webkit-animation: loading_1 1s .5s infinite;
-          animation: loading_1 1s .5s infinite;
+  -webkit-animation: loading_1 1s 0.5s infinite;
+          animation: loading_1 1s 0.5s infinite;
   -webkit-animation-delay: 0.15s;
           animation-delay: 0.15s;
   border-color: #FF79DA transparent #FF79DA transparent;
@@ -1395,6 +1529,17 @@ body {
      object-fit: cover;
 }
 
+.resto_container_card .new {
+  font-size: 14px;
+  position: absolute;
+  padding: 8px 10px;
+  background-color: #99E2D0;
+  color: #2b695a;
+  border-radius: 2px;
+  right: 12px;
+  top: 15px;
+}
+
 .resto_container_card .legend {
   width: 50%;
   height: 30%;
@@ -1419,40 +1564,45 @@ body {
   font-weight: bold;
 }
 
+.resto_container_card .heart {
+  position: absolute;
+  bottom: 25px;
+  right: 25px;
+  height: 25px;
+  width: 25px;
+}
+
+.resto_container_card .heart:hover .state_2 {
+  opacity: 0;
+}
+
+.resto_container_card .heart:hover .state_1 {
+  opacity: 1;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
 .resto_container_card .fa-heart {
-  position: relative;
-  left: 10px;
-  top: 10px;
-  font-size: 23px;
-  height: 20px;
-  width: 20px;
-}
-
-.resto_container_card .test {
-  z-index: 0;
-  background-color: blue;
+  font-size: 25px;
   position: absolute;
-  right: 30px;
-  bottom: 20px;
-  width: 40px;
-  height: 40px;
 }
 
-.resto_container_card .test .fas {
-  color: red;
+.resto_container_card .state_1 {
+  opacity: 0;
+  color: transparent;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+  background: linear-gradient(#9356DC, #FF79DA);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
 }
 
-.resto_container_card .hovertest {
-  background: linear-gradient(10deg, #9356DC, #FF79DA);
-  position: absolute;
-  right: 30px;
-  bottom: 20px;
-  width: 40px;
-  height: 40px;
-}
-
-.resto_container_card .hovertest .far {
-  color: blue;
+.resto_container_card .state_2 {
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
 }
 
 footer {
@@ -1488,7 +1638,7 @@ footer a {
   color: white;
 }
 
-@media screen and (min-width: 426px) and (max-width: 1024px) {
+@media screen and (min-width: 426px) and (max-width: 1439px) {
   section {
     margin: auto;
   }
@@ -1531,17 +1681,35 @@ footer a {
   }
 }
 
-@media screen and (min-width: 1025px) {
+@media screen and (min-width: 1440px) {
   body {
     background: transparent;
+  }
+  section {
     margin: auto;
     max-width: 1440px;
+  }
+  .loading_animation {
+    max-width: 1440px;
+    background-color: transparent;
+    width: 100%;
   }
   .find_container {
     width: 100%;
   }
+  .find_container_local {
+    width: 30%;
+    margin: auto;
+    margin-bottom: 20px;
+    background: transparent;
+    -webkit-box-shadow: 0px 0px 0px;
+            box-shadow: 0px 0px 0px;
+    border-bottom: 2px solid #99E2D0;
+  }
   .find_container_reserve {
-    width: 100%;
+    margin-bottom: 30px;
+    border-radius: 20px;
+    width: 35%;
   }
   .use_container {
     width: 100%;
