--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,6 @@
 @import "mixins";
 @import "header";
 @import "menu";
-@import "media_query";
 
 // Mobile pages -------------------------------------------------->
 
@@ -15,53 +14,53 @@
   @include header_menu;
 }
 
-.pages{
+.pages {
   opacity: 0;
   animation: pages 1s 2s both;
 }
 
-  // loader -------------------------------------------------->
+// loader -------------------------------------------------->
 
-  .loading_animation {
-    position: fixed;
+.loading_animation {
+  position: fixed;
+  display: block;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  // width: 100%;
+  // height: 100%;
+  animation: display_load 3s both;
+  // animation-timing-function: cubic-bezier(1,0,1,0) ;
+  background-color: rgba($color: #99e2d0, $alpha: 0.1);
+
+  .circle {
+    box-sizing: border-box;
     display: block;
-    width: 100%;
-    height: 100%;
-    z-index: -2;
-    // width: 100%;
-    // height: 100%;
-    animation: display_load 3s both;
-    // animation-timing-function: cubic-bezier(1,0,1,0) ;
-    background-color: rgba($color: #99E2D0, $alpha: 0.1);
-    
-    .circle {
-      box-sizing: border-box;
-      display: block;
-      position: relative;
-      width: 100px;
-      height: 100px;
-      margin: auto;
-      top: 300px;
-      border: 2px solid $primary;
-      border-radius: 50%;
-      animation: loading_1 1s .5s infinite;
-      animation-delay: 0.15s;
-      border-color: $secondary transparent $secondary transparent;
-    }
-    .line {
-      box-sizing: border-box;
-      display: block;
-      position: relative;
-      width: 50px;
-      height: 50px;
-      margin: auto;
-      top: 225px;
-      border: 3px solid $primary;
-      border-radius: 50%;
-      animation: loading_2 2s infinite reverse;
-      border-color: transparent $primary transparent $primary;
-    }
+    position: relative;
+    width: 100px;
+    height: 100px;
+    margin: auto;
+    top: 300px;
+    border: 2px solid $primary;
+    border-radius: 50%;
+    animation: loading_1 1s 0.5s infinite;
+    animation-delay: 0.15s;
+    border-color: $secondary transparent $secondary transparent;
   }
+  .line {
+    box-sizing: border-box;
+    display: block;
+    position: relative;
+    width: 50px;
+    height: 50px;
+    margin: auto;
+    top: 225px;
+    border: 3px solid $primary;
+    border-radius: 50%;
+    animation: loading_2 2s infinite reverse;
+    border-color: transparent $primary transparent $primary;
+  }
+}
 
 .find_container {
   display: flex;
@@ -126,8 +125,8 @@
     padding: 10px 0px;
     font-weight: 500;
     font-size: 1em;
-    &:hover{
-      background-color: rgba($color: #9356DC, $alpha: 0.1);
+    &:hover {
+      background-color: rgba($color: #9356dc, $alpha: 0.1);
     }
 
     .number {
@@ -151,11 +150,13 @@
       font-size: 20px;
       text-align: center;
     }
-    &:hover .fas{
+    &:hover .fas {
       color: $primary;
     }
   }
 }
+
+  // les restaurants ------------------------------------->
 
 .resto {
   position: relative;
@@ -166,7 +167,6 @@
     padding: 20px;
     margin: 0%;
   }
-
 
   // card ------------------------------------------------>
 
@@ -202,7 +202,16 @@
         height: 70%;
         object-fit: cover;
       }
-
+      .new{
+        font-size: 14px;
+        position: absolute;
+        padding: 8px 10px;
+        background-color: $tertiary;
+        color: #2b695a;
+        border-radius: 2px;
+        right: 12px;
+        top: 15px;
+      }
       .legend {
         width: 50%;
         height: 30%;
@@ -219,44 +228,17 @@
         }
       }
 
-      .fa-heart {
-        position: relative;
-        // position: relative;
-        left: 10px;
-        top: 10px;
-        font-size: 23px;
+      @include heart;
 
-        height: 20px;
-        width: 20px;
-      }
-      .test{
-        .fas{
-          color: red;
-        }
-        z-index: 0;
-        background-color: blue;
-        position: absolute;
-        right: 30px;
-        bottom: 20px;
-        width: 40px;
-        height: 40px;
-      }
-      
-      .hovertest{
-        .far{
-          color: blue;
-        }
-        
-        background: linear-gradient( 10deg, $primary, $secondary);
-        position: absolute;
-        right: 30px;
-        bottom: 20px;
-        width: 40px;
-        height: 40px;
-      }
     }
+
+
+
+
+    
   }
 }
+
 
 footer {
   display: flex;
@@ -287,8 +269,8 @@ footer {
 
 // Mode tablette ----------------------------------------------------------->
 
-@media screen and (min-width: 426px) and (max-width: 1024px) {
-  body{
+@media screen and (min-width: 426px) and (max-width: 1439px) {
+  body {
     // background: transparent;
   }
   section {
@@ -302,13 +284,13 @@ footer {
   .use_container {
     padding-top: 10px;
     padding-bottom: 40px;
-    
-    &_card{
+
+    &_card {
       &_template {
         margin: auto;
         margin-top: 20px;
         width: 60%;
-  
+
         .number {
           position: relative;
           left: -10px;
@@ -318,7 +300,7 @@ footer {
   }
 
   .resto {
-    &_container{
+    &_container {
       max-width: 800px;
       display: flex;
       justify-content: space-around;
@@ -326,13 +308,13 @@ footer {
       width: 90%;
       margin: auto;
 
-    &_card {
-      height: 250px;
-      width: 300px;
-      margin: 0;
-      margin-top: 20px;
+      &_card {
+        height: 250px;
+        width: 300px;
+        margin: 0;
+        margin-top: 20px;
+      }
     }
-  }
   }
 
   footer {
@@ -340,50 +322,73 @@ footer {
   }
 }
 
-@media screen and (min-width: 1025px){
-  body{
+  // mode desktop-------------------------------------------------->
+
+@media screen and (min-width: 1440px) {
+  body {
     background: transparent;
+  }
+  
+  section{
     margin: auto;
     max-width: 1440px;
+
   }
 
-  .find_container{
+  .loading_animation{
+    max-width: 1440px;
+    background-color: transparent;
     width: 100%;
-    &_reserve{
-      width: 100%;
+  }
+
+  .find_container {
+    width: 100%;
+    &_local{
+      
+      width: 30%;
+      margin: auto;
+      margin-bottom: 20px;
+      background: transparent;
+      box-shadow: 0px 0px 0px ;
+      border-bottom: 2px solid $tertiary;
+      
+    }
+    &_reserve {
+      margin-bottom: 30px;
+      border-radius: 20px;
+      width: 35%;
     }
   }
 
-  .use_container{
+  .use_container {
     width: 100%;
     padding: 20px 0px;
-    h2{
+    h2 {
       padding: 0px 20px;
     }
-    &_card{
+    &_card {
       display: flex;
       justify-content: space-around;
 
-      &_template{
+      &_template {
         width: 30%;
       }
 
-      .number{
+      .number {
         position: relative;
         margin-left: -20px;
       }
     }
   }
 
-  .resto{
+  .resto {
     background-color: transparent;
 
-    &_container{
+    &_container {
       display: flex;
 
-      &_card{
+      &_card {
         width: 25%;
-
       }
     }
   }
