--- a/scss/style.scss
+++ b/scss/style.scss
@@ -329,10 +329,9 @@ footer {
     background: transparent;
   }
   
-  section{
+  section, .loader{
     margin: auto;
     max-width: 1440px;
-
   }
 
   .loading_animation{
