--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -26,12 +26,14 @@
   font-weight: 500;
   transition: all .3s;
   opacity: 0.9;
+
   &:hover{
     color: white;
     background: linear-gradient(-190deg, $primary, $secondary);
     box-shadow: 1px 1px 5px rgb(85, 85, 85);
     opacity: 1;
   }
+
   &:focus {
     outline:none;
   }
@@ -99,17 +101,19 @@
       transform: scale(1);
     }
   }
+
   .fa-heart{
     font-size: 25px;
     position: absolute;
   }
+
   .state_1{
     opacity: 0;
     color: transparent;
     transform: scale(0);
     background: linear-gradient($primary, $secondary);
-    background-clip: text;
-    -webkit-background-clip: text;
+    background-clip: content-box;
+    -webkit-background-clip: content-box;
     transition: all .3s ease-in-out;
   }
 
@@ -161,11 +165,8 @@
       transition: all .4s .1s ease-in-out;
 
     }
-    &:hover i{
-      transform: translateX(-40px) rotate(-360deg);
-      opacity: 1;
-    }
 
+    
     
     
     .green_check{
@@ -177,9 +178,17 @@
       background-color: $tertiary;
       transition: all .5s ease-in-out;
     }
+    
+    &:hover i{
+      transform: translateX(-40px) rotate(-360deg);
+      opacity: 1;
+    }
     &:hover .green_check{
       transform: translateX(-40px);
       width: 60px;
+    }
+    &:hover .prix{
+      transform: translateX(-50px);
     }
 
 
@@ -207,9 +216,6 @@
       align-self: flex-end;
       top: 23px;
       transition: all .5s ease-in-out;
-    }
-    &:hover .prix{
-      transform: translateX(-50px);
     }
     
     :nth-child(1){
