--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -108,7 +108,7 @@
   }
 
   .state_1{
-    opacity: 0;
+    // opacity: 0;
     color: transparent;
     transform: scale(0);
     background: linear-gradient($primary, $secondary);
