--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -91,35 +91,33 @@
     right: 25px;
     height: 25px;
     width: 25px;
-
+    
     &:hover .state_2{
       opacity: 0;
     }
-
+    
     &:hover .state_1{
       opacity: 1;
       transform: scale(1);
     }
   }
-
   .fa-heart{
-    font-size: 25px;
     position: absolute;
+    font-size: 25px;
   }
-
+  
+  
   .state_1{
-    // opacity: 0;
-    color: transparent;
+    opacity:  0;
     transform: scale(0);
-    background: linear-gradient($primary, $secondary);
-    background-clip: content-box;
-    -webkit-background-clip: content-box;
     transition: all .3s ease-in-out;
+    background: linear-gradient($primary, $secondary);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
-
+  
   .state_2{
     transition: all .5s ease-in-out;
-
   }
 }
 
