Contact avec mail

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -151,6 +151,8 @@
     box-sizing: content-box;
     overflow: hidden;
 
+
+
     .fas{
       color: white;
       opacity: 0;
@@ -165,7 +167,7 @@
     }
 
     
-    
+    // menu-check ------------------------
     
     .green_check{
       z-index: -1;
